<resources>
    <string name="app_name">Mads Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button_zero">0</string>
    <string name="button_decimal">.</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_equal">=</string>
    <string name="button_add">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">X</string>
    <string name="button_divide">/</string>
    <string name="button_clear_all">AC</string>
    <string name="button_history">History</string>
    <string name="label_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="skip">Skip</string>
    <string name="error_invalied_email">Invalid Email address, ex: abc@example.com</string>
    <string name="error_empty_email">Please enter email</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="error_invalied_password">Password must be atleast 8 charactors</string>
    <string name="button_clear_history">Clear History</string>

</resources>